--- a/03_CSS_Cofee_Position_27_04_2023/style.css
+++ b/03_CSS_Cofee_Position_27_04_2023/style.css
@@ -1,13 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Raleway:ital,wght@0,100;0,500;0,600;0,800;1,500;1,600;1,800&display=swap');
+
+* {
+margin: 0;
+padding: 0;
+}
 body{
     background-color: whitesmoke;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    /* жирность шрифта */
+    font-style: italic;
+    
 }
+
 .header{
     height: 400px;
     background-image: url('./images/Image20230425120039.jpg');
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
+
 h1{
+    font-style: normal;
+    font-family: 'Covered By Your Grace', cursive;
     font-size: 100px;
     text-align:center;
+    color: rgb(3, 150, 100,0.75);
+    padding-top: 132px;
+
 }
